# ChangeLog for xfce-extra/xfce4-eyes-plugin
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-eyes-plugin/ChangeLog,v 1.24 2013/05/05 17:17:05 ssuominen Exp $

  05 May 2013; Samuli Suominen <ssuominen@gentoo.org>
  -files/xfce4-eyes-plugin-4.4.1-libxfce4ui.patch,
  -xfce4-eyes-plugin-4.4.1-r1.ebuild:
  old

  12 Apr 2013; Agostino Sarubbo <ago@gentoo.org> xfce4-eyes-plugin-4.4.2.ebuild:
  Stable for arm, wrt bug #465286

  11 Apr 2013; Agostino Sarubbo <ago@gentoo.org> xfce4-eyes-plugin-4.4.2.ebuild:
  Stable for x86, wrt bug #465286

  11 Apr 2013; Agostino Sarubbo <ago@gentoo.org> xfce4-eyes-plugin-4.4.2.ebuild:
  Stable for amd64, wrt bug #465286

  10 Apr 2013; Jeroen Roovers <jer@gentoo.org> xfce4-eyes-plugin-4.4.2.ebuild:
  Stable for HPPA (bug #465286).

*xfce4-eyes-plugin-4.4.2 (04 Mar 2013)

  04 Mar 2013; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-eyes-plugin-4.4.2.ebuild:
  Version bump.

  28 Nov 2012; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-eyes-plugin-4.4.1-r1.ebuild:
  EAPI5

  07 Aug 2012; Samuli Suominen <ssuominen@gentoo.org>
  -xfce4-eyes-plugin-4.4.1.ebuild:
  old

  14 Jul 2012; Markus Meier <maekke@gentoo.org>
  xfce4-eyes-plugin-4.4.1-r1.ebuild:
  arm stable, bug #416233

  22 May 2012; Jeff Horelick <jdhore@gentoo.org>
  xfce4-eyes-plugin-4.4.1-r1.ebuild:
  marked x86 per bug 416233

  20 May 2012; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-eyes-plugin-4.4.1.ebuild:
  Revert ppc and ppc64 to ~arch pending on user request wrt #416233

  20 May 2012; Agostino Sarubbo <ago@gentoo.org>
  xfce4-eyes-plugin-4.4.1-r1.ebuild:
  Stable for amd64, wrt bug #416233

  17 May 2012; Jeroen Roovers <jer@gentoo.org>
  xfce4-eyes-plugin-4.4.1-r1.ebuild:
  Stable for HPPA (bug #416233).

  05 May 2012; Michał Górny <mgorny@gentoo.org>
  xfce4-eyes-plugin-4.4.1.ebuild, xfce4-eyes-plugin-4.4.1-r1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig
