@@ -1,0 +1,12 @@
+DEFINED_PHASES=configure install postinst postrm preinst prepare setup
+DEPEND=>=dev-libs/glib-2.24:= >=x11-libs/gtk+-2.20:2= >=xfce-base/libxfce4util-4.10:= >=xfce-base/libxfcegui4-4.10:= >=xfce-base/xfce4-panel-4.10:= dev-util/intltool virtual/pkgconfig !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 >=sys-apps/sed-4 >=dev-util/xfce4-dev-tools-4.10
+DESCRIPTION=A dict.org querying application and panel plug-in for the Xfce desktop
+EAPI=5
+HOMEPAGE=http://goodies.xfce.org/projects/applications/xfce4-dict
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux
+LICENSE=GPL-2
+RDEPEND=>=dev-libs/glib-2.24:= >=x11-libs/gtk+-2.20:2= >=xfce-base/libxfce4util-4.10:= >=xfce-base/libxfcegui4-4.10:= >=xfce-base/xfce4-panel-4.10:=
+SLOT=0
+SRC_URI=mirror://xfce/src/apps/xfce4-dict/0.7/xfce4-dict-0.7.1.tar.bz2
+_eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	xfconf	eee85b2bc9e9826f5a9c1349a75a69fe
+_md5_=8ce369ba7d7f0d2868b0626b959148a1
