@@ -2,18 +2,28 @@
 Hash: SHA256
 
 AUX xfce4-dict-0.6.0-underlinking.patch 702 SHA256 b3705741591209ca815387644f7d040539c45f146d8707812f5092e89bc2f9c3 SHA512 71fc0bb3b1af85e9c4acefedd6fe62dd8ed12d33106245f61efe15d0c10c782e4d3ec3a671942b4c5af475a3ca32a713cffb7a4f87e24f5eb155d189591eefa7 WHIRLPOOL e03b0484183abf524794ea35a41838fa90f532479e716918ff4103d984ec4b5737391f55c18d95e724b568badbfd6cc85696ae8b1cee07671a5c3e8b687002c3
-DIST xfce4-dict-0.6.0.tar.bz2 373420 SHA256 a8188ca4c980ca2003be6bf2391589f5122830680c41d51105b10813850da0d3
+DIST xfce4-dict-0.6.0.tar.bz2 373420 SHA256 a8188ca4c980ca2003be6bf2391589f5122830680c41d51105b10813850da0d3 SHA512 3964abe66280413f7db4617c33379144414bfc751070a24167cd3285619fce18fdf81c4fce1b3f58e6866611a79400e9ea0a56063a4fb147e3fbc7a2f6db7c4c WHIRLPOOL eb04bd1521fdbfba5d01452948f9b6cedaa4620d48b155dd5a90af77e2d62e3817bb1bdf8804feb11d9d1286a537b341eb59fc9c76395a0677fa43649ab6e3de
+DIST xfce4-dict-0.7.1.tar.bz2 493952 SHA256 d15611e75a5e9c51167f2101cb760505ff72c446ef15542183b5e0fbf9c540fc SHA512 820d77e84583ace3b809b45ecbbf16da7fbdd5d4d69762e18e940f20ea9f54a5f88332e24fe85865fe50a5ab0c31f7b9b20ce28c1179b5538d4612c2d9fe1d50 WHIRLPOOL b17ca270ac568667467bfd79ec40e40257efdeaabee06fcc3a3044832e1f3e6c03876f11583382a95939bcd7a16c0e91b40e8a35557b1b37b45c47946db52158
 EBUILD xfce4-dict-0.6.0.ebuild 1339 SHA256 0796f84c3120a93c80ed8928adc2c59374b849ce6cc5dfd2b5beab4174b255d3 SHA512 228b32adeaf6ef061c21d758d99b19ec5e1c557246e9f373ac892ed5f478f6371031616f0729aed7c36252d0bf5a5777922a6146954e2c0b99fbe18bf9732271 WHIRLPOOL c8c5517baa84beae759cac194b7585c363dc3e20ce10f21d16844aaba4f42c2a8e70b524a4afb1d4ff01766b7ea9d1df526f26ac21bda803d0a3882eca916cc5
-MISC ChangeLog 6746 SHA256 b7a116b06d3195d02be4b200445b68be8710e4a3b2c37cbd34b5715fac5cc4b9 SHA512 f2cd17b31e53abffd06ea2e4c4563b2fc2d0394901ef3a6e387e455fabe2ab0bd5ffded37436a83de2ed03e29dec0aed1fd1e9ef02f5a82801a3fd43a554122b WHIRLPOOL 9ffa0e77dc01bed717e9d24af81468829c5a0bd896acdff656f9b78ae35921f369847a26fff2cde98b54efb6c3c87ff52b45363bacda6001f31edfcaa14ea088
+EBUILD xfce4-dict-0.7.1.ebuild 964 SHA256 07a5e736f3654b77f3cb7deccbeb181e80fd7facd0a81526425780bc3332a7d5 SHA512 39f10d21f7b28b49c67b4aa55f70bb25916bd377aa2f1b03f166bfc5e2c492ffdd13807d0ad7b39ecf618721510cfaa9204f42774304794daf51b061ee0c80b8 WHIRLPOOL 1a75ac2b47eb0a2e7d4c7ec9321317b8bb4acd83e98c452407fc819c4f76a73efe7f39498bb5a49c54a1cff5d156c2cc950a8a362ac476e3aa9a7d40c928ff24
+MISC ChangeLog 6888 SHA256 43f6b0b10e5949098e59b39f149607c8efa582f9e8e8e27f7c386fc573c24e48 SHA512 ec5294889f26c67f79d8e9e9c9c3c4b4ee1eeaed4658c56d147f089cf24dce294001849f88bc89952c22712c2da50226c8ed8a8d61d42ea3b423e05f5a559dd1 WHIRLPOOL f96de115422c836399b1766fa54a5cb6208cf0c4d191016aa288e8f9bf56b3ef40e26678ecc4ffa6ae3defd2e2783d199fdd6e990763e05e94209166d48ffb1a
 MISC metadata.xml 159 SHA256 900ea49b6703fce452e205b85226bf1f994725963e5840da501182e7487d0e63 SHA512 000eb10e453390fb27843585adf354d725e77d881553d97a1a242bf06578a402ee4a924d9d8205a3fa687a59e2402bc9f3e1c227e448e05026354c196cf0a4f3 WHIRLPOOL 6f01aa01b8124d752be8e6c550ffdfc9093d45b206771c924ce25ce3f0daf006a669721d1385ff1bc803df342322d1c264f2905d3ccc44686c937deae8308ec3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJQtgFxAAoJEEdUh39IaPFNEfgH/RvtRAt86lsx1taibxoLu90F
-OoGeWCrb7OtFuehm0kfLeP36Awzy+5Iv2kC73ED/1H0842d/Aq9/k5MTh5mODv4u
-Ls8nXn5RyuEhQKv+lyenLECQzijdGPQWbNyfImt50Kt2WwlXAQTPefbUawE6MSEH
-/SI+Aw+BN9OIz9F088g7pk2h9y+G53pg6vg0OSkuVuxHXsekwgyFCIYYj1xIit47
-ByTOM05jYgoZuuWCg/tSzPOb3S+nKYQMe/v6X+2FrPAflqW4zirheW3NpielKMA3
-tV8WqG9Nl2gm7I8EEAx6MUJeKsl+12abNP/rsxWFBgSXfqxEDb8n8ZFm8vGOE7M=
-=aCjZ
+iQJ8BAEBCABmBQJVFxMyXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOkj0QAIOVh9O4sfhuvV5yMpTNzSVp
+5HqOwP+hiL63nZZCLoDRNYvO5HaX7LHoqXr4iOGLWBY2jbwUrKqQ4LdhT8utCWrT
+U+/uo9lbE5JuGYizg0o4z25D8n2/2mv0ZAJwgaSs8nnqZ57Ido5KNYQ0pwy2u4Jq
+8QZRVSvU+9J4N8FpEfwTMh7kd/YWRPraJBLvP2v3QHc0Ip5m5PDkSQ95NIxDxINg
+18L9bg9oNNUNzPLoQ5MwpVIOgHYCpA4xTdee9ApuSzlbRfHdq6wcXzyfZCA/jn4T
+peT9M4qgh/+qX3+S8g4vw2IkhJ7VvpOnbQiH0dzRXECYYVm25j3sGLXe8Bm36mhK
+/6xxsf7Dq53NWs4V115flUkcOzEQlDbZv36cNrzlJy+ovfxitkLJ2nZkryBden3f
+PAAys7lVLQY1qA6G+E/kkSjIwCJlfBcBibrCnyKkvCrLFDy6+8GtPOPQGMvgkTDg
+5MXYQCzHofUWhLTlA0j5LARw+3H41EoFfjTcnNemgu4mVWsiTm/DDqReQMsL5fD4
+Sj2VdULYv2ml2DxJlyS7uXO9BosThI0CxuKQ+lDyYjNXKgErRkcqkyuAbJoCoeqA
+aRkfEfHYIKpN1zqY5M2O42sXRZJYfNRK9GMFdrDZglHC9vcisZwOMtgxHzcneiBt
+e9COl1NpaS19Kx2dTcJg
+=3Oe5
 -----END PGP SIGNATURE-----
